--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexo-renderer-multi-next-markdown-it",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A Markdown parser for Hexo and auto Minify HTML, CSS, JS.",
   "main": "index.js",
   "repository": "https://github.com/zkz098/hexo-renderer-multi-markdown-it",
@@ -46,9 +46,10 @@
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-checkbox": "^1.0.6",
     "markdown-it-toc-and-anchor": "^4.2.0",
-    "minimatch": "^3.0.0",
+    "minimatch": "^5.0.0",
     "prismjs": "^1.21.0",
     "puppeteer-cn": "^0.1.8",
+    "terser": "^5.15.0",
     "uglify-js": "^3.15.5"
   },
   "engines": {
