--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexo-renderer-multi-next-markdown-it",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A Markdown parser for Hexo and auto Minify HTML, CSS, JS.",
   "main": "index.js",
   "repository": "https://github.com/zkz098/hexo-renderer-multi-markdown-it",
@@ -23,32 +23,32 @@
   "bugs": "https://github.com/zkz098/hexo-renderer-multi-markdown-it/issues",
   "homepage": "https://github.com/zkz098/hexo-renderer-multi-markdown-it",
   "dependencies": {
-    "clean-css": ">5.0.0",
+    "clean-css": ">=5.3.1",
     "deasync-promise": "^1.0.1",
-    "frappe-charts": "^1.5.0",
+    "frappe-charts": "^1.6.2",
     "html-minifier": "^4.0.0",
-    "katex": "^0.12.0",
-    "markdown-it": "^10.0.0",
+    "katex": "^0.16.2",
+    "markdown-it": "^11.0.0",
     "markdown-it-abbr": "^1.0.4",
-    "markdown-it-attrs": "^3.0.2",
+    "markdown-it-attrs": "^4.1.4",
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-charts": "^1.0.5",
-    "markdown-it-container": "^2.0.0",
-    "markdown-it-deflist": "^2.0.3",
-    "markdown-it-emoji": "^1.4.0",
-    "markdown-it-footnote": "^3.0.2",
-    "markdown-it-ins": "^3.0.0",
-    "markdown-it-mark": "^3.0.0",
-    "markdown-it-multimd-table": "^4.0.1",
+    "markdown-it-container": "^3.0.0",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-emoji": "^2.0.2",
+    "markdown-it-footnote": "^3.0.3",
+    "markdown-it-ins": "^3.0.1",
+    "markdown-it-mark": "^3.0.1",
+    "markdown-it-multimd-table": "^4.2.0",
     "markdown-it-pangu": "^1.0.2",
     "markdown-it-sub": "^1.0.0",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-task-checkbox": "^1.0.6",
     "markdown-it-toc-and-anchor": "^4.2.0",
-    "minimatch": "^5.0.0",
-    "prismjs": "^1.21.0",
+    "minimatch": "^5.1.0",
+    "prismjs": "^1.29.0",
     "puppeteer-cn": "^0.1.8",
-    "uglify-js": "^3.15.5"
+    "uglify-js": "^3.17.0"
   },
   "engines": {
     "node": ">=14.0.0"
