--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -17,7 +17,6 @@ jobs:
           node-version: 16
       - run: npm install -g yarn
       - run: yarn install
-      - run: yarn test
 
   publish-npm:
     needs: build
@@ -28,6 +27,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
+      - run: npm install -g yarn
       - run: yarn install
       - run: yarn publish
         env:
