--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "minimatch": "^5.1.0",
     "prismjs": "^1.29.0",
     "puppeteer-cn": "^0.1.8",
+    "terser": "^5.15.1",
     "uglify-js": "^3.17.0"
   },
   "engines": {
