--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "markdown-it-toc-and-anchor": "^4.2.0",
     "minimatch": "^5.1.0",
     "puppeteer-cn": "^0.1.8",
-    "terser": "^5.15.1",
-    "uglify-js": "^3.17.0"
+    "terser": "^5.15.1"
   },
   "engines": {
     "node": ">=14.0.0"
@@ -59,7 +58,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.1",
-    "eslint-plugin-standard": "^5.0.0"
+    "eslint-plugin-promise": "^6.0.1"
   }
 }
