--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "markdown-it-toc-and-anchor": "^4.2.0",
     "minimatch": "^5.1.0",
     "prismjs": "^1.29.0",
-    "puppeteer-cn": "^0.1.8",
+    "puppeteer": "^19.6.0",
     "terser": "^5.15.1"
   },
   "engines": {
