--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexo-renderer-multi-next-markdown-it",
-  "version": "0.1.3-fix2",
+  "version": "0.1.6",
   "description": "A Markdown parser for Hexo and auto Minify HTML, CSS, JS.",
   "main": "index.js",
   "repository": "https://github.com/zkz098/hexo-renderer-multi-next-markdown-it",
