--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexo-renderer-multi-next-markdown-it",
-  "version": "0.1.8",
+  "version": "0.2.0",
   "description": "A Markdown parser for Hexo and auto Minify HTML, CSS, JS.",
   "main": "index.js",
   "repository": "https://github.com/zkz098/hexo-renderer-multi-next-markdown-it",
@@ -18,47 +18,41 @@
     "index.js",
     "lib/"
   ],
-  "author": "Chou Kaitaku",
+  "author": "zkz098",
   "license": "MIT",
-  "bugs": "https://github.com/zkz098/hexo-renderer-multi-next-markdown-it/issues",
-  "homepage": "https://github.com/zkz098/hexo-renderer-multi-next-markdown-it",
   "dependencies": {
-    "clean-css": ">=5.3.2",
     "deasync-promise": "^1.0.1",
     "frappe-charts": "^1.6.2",
-    "hexo-util": "^3.0.1",
-    "html-minifier": "^4.0.0",
-    "katex": "^0.16.7",
-    "markdown-it": "^13.0.1",
-    "markdown-it-abbr": "^1.0.4",
+    "hexo-util": "^3.1.0",
+    "katex": "^0.16.9",
+    "markdown-it": "^14.0.0",
+    "markdown-it-abbr": "^2.0.0",
     "markdown-it-attrs": "^4.1.6",
     "markdown-it-bracketed-spans": "^1.0.1",
     "markdown-it-charts": "^1.0.5",
-    "markdown-it-container": "^3.0.0",
-    "markdown-it-deflist": "^2.1.0",
-    "markdown-it-emoji": "^2.0.2",
-    "markdown-it-footnote": "^3.0.3",
-    "markdown-it-ins": "^3.0.1",
-    "markdown-it-mark": "^3.0.1",
-    "markdown-it-multimd-table": "^4.2.2",
+    "markdown-it-container": "^4.0.0",
+    "markdown-it-deflist": "^3.0.0",
+    "markdown-it-emoji": "^3.0.0",
+    "markdown-it-footnote": "^4.0.0",
+    "markdown-it-ins": "^4.0.0",
+    "markdown-it-mark": "^4.0.0",
+    "markdown-it-multimd-table": "^4.2.3",
     "markdown-it-pangu": "^1.0.2",
-    "markdown-it-sub": "^1.0.0",
-    "markdown-it-sup": "^1.0.0",
+    "markdown-it-sub": "^2.0.0",
+    "markdown-it-sup": "^2.0.0",
     "markdown-it-task-checkbox": "^1.0.6",
     "markdown-it-toc-and-anchor": "^4.2.0",
-    "minimatch": "^9.0.0",
     "prismjs": "^1.29.0",
-    "puppeteer": "^20.2.1",
-    "terser": "^5.17.4"
+    "puppeteer": "^21.6.0"
   },
   "engines": {
     "node": ">=14.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.41.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^16.0.0",
+    "eslint": "^8.55.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1"
   }
